repair of the responsive menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsed_second" aria-expanded="false">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsed_second" aria-controls="collapsed_second" aria-expanded="false">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -27,7 +27,7 @@
                 <a class="navbar-brand" href="#"><i class="fa fa-laptop"></i></a>
             </div>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="collapsed_second">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#services">O nas</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
@@ -157,7 +157,7 @@
                 <div class="col-sm-4 team-member">
                     <figure>
                         <i class="fa fa-user"></i>
-                        <figcaption>Joey Tribbiani</figcaption>
+                        <figcaption>Jan</figcaption>
                     </figure>
                     <p>Menager</p>
                     <div class="social">
@@ -169,7 +169,7 @@
                 <div class="col-sm-4 team-member">
                     <figure>
                         <i class="fa fa-user"></i>
-                        <figcaption>Chandler Bing</figcaption>
+                        <figcaption>Mark</figcaption>
                     </figure>
                     <p>Frontend developer</p>
                     <div class="social">
@@ -181,7 +181,7 @@
                 <div class="col-sm-4 team-member">
                     <figure>
                         <i class="fa fa-user"></i>
-                        <figcaption>Rachel Green</figcaption>
+                        <figcaption>Anna</figcaption>
                         <p>Designer</p>
                     </figure>
                     <div class="social">
