content about us

--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
     <section id="services">
         <div class="container">
             <h2>Co robimy ?</h2>
-            <p>Tworzymy piękne strony internetowe, wykorzystując najnowsze technologie. W trosce o naszych klientów do każdego projektu podchodzimy indywidualnie.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <div class="row">
                 <div class="col-xs-12 col-md-4">
                     <i class="fa fa-heart"></i>
-                    <h3>Pasja</h3>
-                    <p>Kochamy to co robimy :)</p>
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <i class="fa fa-book"></i>
-                    <h3>Wiedza</h3>
-                    <p>Wykorzystujemy najnowsze technologie.</p>
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <i class="fa fa-comment"></i>
-                    <h3>Zaangażowanie</h3>
-                    <p>Robimy wszystko aby sprostać Twoim oczekiwaniom.</p>
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
         </div>
