brand icon, comments

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+<!------------------------------ NAVIGATION ------------------------------>   
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -25,7 +26,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-                <a class="navbar-brand" href="#"><img class=" fa-laptop" src="img/icon-responsive.png" alt=""></a>
+                <a class="navbar-brand" href="#"><i class="fa fa-laptop"></i></a>
             </div>
 
             <div class="collapse navbar-collapse" id="collapsed_second">
@@ -39,6 +40,7 @@
         </div>
         
     </nav>
+<!--------------------------------------- HEADER --------------------------------------->    
     <header>
         <div class="inner text-center">
             <h1>Odkrywaj więcej!</h1>
@@ -68,7 +70,8 @@
             </div>
         </div>
     </section>
-
+<!--------------------------------------- PORTFOLIO --------------------------------------->    
+   
     <section id="portfolio">
         <h2>Portfolio</h2>
         <p>Poniżej przedstawiamy nasze realizacje</p>
@@ -150,7 +153,7 @@
         </div>
     </section>
 
-    <!-------------------------------  TEAM ------------------------------- -->
+<!-------------------------------  TEAM ----------------------------------->
     <section id="team" class="text-center">
         <h2>Poznaj nasz zespół</h2>
         <div class="container">
@@ -194,9 +197,9 @@
             </div>
         </div>
     </section>
-    <!--------------------- CONTACT-------------------------- -->
+<!------------------------------- CONTACT ------------------------------------------->
     <section id="contact" class="text-center">
-        <h2>Zapraszamy do kontaktu</h2>
+        <h2>Napisz do nas</h2>
         <div class="container">
             <div class="row">
                 <form action="">
@@ -215,7 +218,7 @@
             </div>
         </div>
     </section>
-
+<!------------------------------- FOOTER ------------------------------------------->
     <footer class="text-center">
         <div class="container">
             <div class="row">
