change logo icon

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-                <a class="navbar-brand" href="#"><i class="fa fa-laptop"></i></a>
+                <a class="navbar-brand" href="#"><img class="logoIcon" src="img/www.svg" alt="logo"></a>
             </div>
 
             <div class="collapse navbar-collapse" id="collapsed_second">
@@ -44,7 +44,7 @@
     <header>
         <div class="inner text-center">
             <h1>Odkrywaj więcej!</h1>
-            <a href="#services"><button type="button" class="btn btn-info">view more</button></a>
+            <a href="#services"><button type="button" class="btn btn-info">WIĘCEJ</button></a>
         </div>
     </header>
     <section id="services">
@@ -186,8 +186,8 @@
                     <figure>
                         <i class="fa fa-user"></i>
                         <figcaption>Anna</figcaption>
-                        <p>Designer</p>
                     </figure>
+                    <p>Designer</p>
                     <div class="social">
                         <a href=""><i class="fa fa-facebook"></i></a>
                         <a href=""><i class="fa fa-twitter"></i></a>
@@ -202,7 +202,7 @@
         <h2>Napisz do nas</h2>
         <div class="container">
             <div class="row">
-                <form action="">
+                <form>
                     <div class="col-sm-6">
                         <input type="text" placeholder="Imię">
                         <input type="text" placeholder="Nazwisko">
