changed icon and background-image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Courgette|Dancing+Script|Satisfy|Great+Vibes|Poiret+One|Sacramento|Tangerine|Parisienne|Life+Savers|Allura|Italianno|Petit+Formal+Script|Pacifico|Great-Vibes|Poiret+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Courgette|Dancing+Script|Satisfy|Great+Vibes|Poiret+One|Sacramento|Tangerine|Parisienne|Life+Savers|Allura|Italianno|Petit+Formal+Script|Pacifico|Great-Vibes|Poiret+One|Roboto|Raleway|Ubuntu" rel="stylesheet">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-                <a class="navbar-brand" href="#"><img class="logoIcon" src="img/www.svg" alt="logo"></a>
+                <a class="navbar-brand" href="#"></a>
             </div>
 
             <div class="collapse navbar-collapse" id="collapsed_second">
