--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 <!--------------------------------------- HEADER --------------------------------------->    
     <header>
         <div class="inner text-center">
-            <h1>Odkrywaj więcej!</h1>
+            <h1>Lorem ipsum</h1>
+            <h2>dolor sit amet, consectetur adipisicing elit.</h2>
             <a href="#services"><button type="button" class="btn btn-info">WIĘCEJ</button></a>
         </div>
     </header>
@@ -216,6 +217,11 @@
                     </div>
                 </form>
             </div>
+            <div class="social">
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+            </div>
         </div>
     </section>
 <!------------------------------- FOOTER ------------------------------------------->
@@ -223,11 +229,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="social">
-                        <a href=""><i class="fa fa-facebook"></i></a>
-                        <a href=""><i class="fa fa-twitter"></i></a>
-                        <a href=""><i class="fa fa-linkedin"></i></a>
-                    </div>
+                    <span>Łukasz Wcisło &copy; 2019</span>
                 </div>
             </div>
         </div>
