--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Courgette|Dancing+Script|Satisfy|Great+Vibes|Poiret+One|Sacramento|Tangerine|Parisienne|Life+Savers|Allura|Italianno|Petit+Formal+Script|Pacifico|Great-Vibes|Poiret+One|Roboto|Raleway|Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Courgette|Dancing+Script|Satisfy|Great+Vibes|Poiret+One|Sacramento|Tangerine|Parisienne|Life+Savers|Allura|Italianno|Petit+Formal+Script|Pacifico|Great-Vibes|Poiret+One|Roboto|Raleway|Ubuntu|Thasadith" rel="stylesheet">
 </head>
 
 <body>
