added team imgs

--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
             <div class="row">
                 <div class="col-sm-4 team-member">
                     <figure>
-                        <i class="fa fa-user"></i>
-                        <figcaption>Jan</figcaption>
+                        <div class="img-wrapper">
+                            <img src="img/anna-200.jpg" alt="anna">
+                        </div>
+                        <figcaption>Anna</figcaption>
                     </figure>
                     <p>Menager</p>
                     <div class="social">
@@ -173,8 +175,10 @@
                 </div>
                 <div class="col-sm-4 team-member">
                     <figure>
-                        <i class="fa fa-user"></i>
-                        <figcaption>Mark</figcaption>
+                        <div class="img-wrapper">
+                            <img src="img/luke.jpg" alt="luke">
+                        </div>
+                        <figcaption>Luke</figcaption>
                     </figure>
                     <p>Frontend developer</p>
                     <div class="social">
@@ -185,8 +189,10 @@
                 </div>
                 <div class="col-sm-4 team-member">
                     <figure>
-                        <i class="fa fa-user"></i>
-                        <figcaption>Anna</figcaption>
+                        <div class="img-wrapper">
+                            <img src="img/gustavo-200.jpg" alt="gustavo">
+                        </div>
+                        <figcaption>Gusstav</figcaption>
                     </figure>
                     <p>Designer</p>
                     <div class="social">
@@ -229,7 +235,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <span>Łukasz Wcisło &copy; 2019</span>
+                    <span>Łukasz Wcisło &copy; 2019 - 2021</span>
                 </div>
             </div>
         </div>
