--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <div class="img-wrapper">
                             <img src="img/luke.jpg" alt="luke">
                         </div>
-                        <figcaption>Luke</figcaption>
+                        <figcaption>John</figcaption>
                     </figure>
                     <p>Frontend developer</p>
                     <div class="social">
